--- a/src/main/resources/addnetwork.fxml
+++ b/src/main/resources/addnetwork.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 
 <Pane prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
@@ -53,9 +54,21 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </TextField>
-            <Label id="validate-mark-network-name" GridPane.columnIndex="2" />
-            <Label id="validate-mark-network-address" prefHeight="16.0" prefWidth="0.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label id="validate-mark-network-port" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Label id="validate-mark-network-name" text="☐" GridPane.columnIndex="2">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label id="validate-mark-network-address" prefHeight="16.0" prefWidth="0.0" text="☐" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label id="validate-mark-network-port" text="☐" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
    </children>
