--- a/src/main/resources/addnetwork.fxml
+++ b/src/main/resources/addnetwork.fxml
@@ -59,7 +59,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
             </TextField>
-            <TextField id="input-network-port" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <TextField id="input-nick-name" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </GridPane.margin>
@@ -79,7 +79,7 @@
                <font>
                   <Font size="24.0" />
                </font></Label>
-            <Label id="validate-mark-network-port" text="☐" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <Label id="validate-mark-nick-name" text="☐" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <font>
                   <Font size="24.0" />
                </font>
